maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:16: error: not found: value aMurSud
  if(!aMurSud(x,y))
      ^JediEscaper:20: error: not found: value aMurEst
  if(!aMurEst(x,y))
      ^JediEscaper:40: error: not found: type int
  def res:Array[int] = (-1,1)
                ^JediEscaper:59: error: not found: type int
  var bagglePos = new Array[int](2)
                            ^